// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addVideoAriaLabel adds an aria label to amp-video content 1`] = `
<figure>
  <amp-video
    aria-label="Aria label 1"
  >
    Fallback content
  </amp-video>
</figure>
`;

exports[`addVideoAriaLabel adds an aria label to video content 1`] = `
<figure>
  <video
    aria-label="Aria label 1"
  >
    Fallback content
  </video>
</figure>
`;

exports[`addVideoAriaLabel adds an aria label to video content with a caption 1`] = `
<figure>
  <video
    aria-label="Aria label 2"
  >
    Fallback content
  </video>
  <figcaption>
    Caption below content
  </figcaption>
</figure>
`;

exports[`addVideoAriaLabel ignores arbitrary content 1`] = `
<div>
  Ignore me
</div>
`;

exports[`addVideoAriaLabel ignores video content if content has incorrect node order 1`] = `
<figure>
  <figcaption>
    Caption above content
  </figcaption>
  <video>
    Fallback content
  </video>
</figure>
`;

exports[`addVideoAriaLabel ignores video content if content is not a figure object 1`] = `
<div>
  Ignore me 3
</div>
`;

exports[`addVideoAriaLabel ignores video content without an aria label attribute 1`] = `
<div>
  Ignore me 2
</div>
`;
